--- a/App13/App13/MainPage.xaml
+++ b/App13/App13/MainPage.xaml
@@ -9,7 +9,31 @@
         <Label Text="Welcome to Xamarin.Forms!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
-        
+
+
+
+
+
+
+        <Button Text="Get GPS location"  
+                         Clicked="OnButtonClicked"  
+                         TextColor="Chocolate"  
+                         FontSize="30"/>
+        <Label Text="Longitude"  
+                       FontSize="60"  
+                        TextColor="BlueViolet"/>
+        <Label x:Name="LogitudeLabel"  
+                       FontSize="20"/>
+        <Label Text="Latitude"  
+                       FontSize="60"  
+                        TextColor="DarkRed"/>
+        <Label x:Name="LatitudeLabel"   
+                       FontSize="20"/>
+
+
+
+
+
         <Button x:Name="readyForPickup" Text="Искать мне груз" BackgroundColor="Green" TextColor="White"/>
         <Button x:Name="offline" Text="Занят" BackgroundColor="Orange" TextColor="White"/>
         
