--- a/App13/App13/MainPage.xaml
+++ b/App13/App13/MainPage.xaml
@@ -15,27 +15,23 @@
 
 
 
-        <Button Text="Get GPS location"  
-                         Clicked="OnButtonClicked"  
-                         TextColor="Chocolate"  
-                         FontSize="30"/>
         <Label Text="Longitude"  
-                       FontSize="60"  
-                        TextColor="BlueViolet"/>
+                       FontSize="10"  
+                      />
         <Label x:Name="LogitudeLabel"  
-                       FontSize="20"/>
+                       FontSize="10"/>
         <Label Text="Latitude"  
-                       FontSize="60"  
-                        TextColor="DarkRed"/>
+                       FontSize="10"  
+                        />
         <Label x:Name="LatitudeLabel"   
-                       FontSize="20"/>
+                       FontSize="10"/>
 
 
 
 
 
-        <Button x:Name="readyForPickup" Text="Искать мне груз" BackgroundColor="Green" TextColor="White"/>
-        <Button x:Name="offline" Text="Занят" BackgroundColor="Orange" TextColor="White"/>
+        <Button x:Name="readyForPickup" Text="Онлайн"  BackgroundColor="Green" TextColor="White"/>
+        <Button x:Name="offline" Text="Офлайн" BackgroundColor="red" TextColor="White"/>
         
     </StackLayout>
 
