--- a/App13/App13/MainPage.xaml
+++ b/App13/App13/MainPage.xaml
@@ -6,13 +6,13 @@
 
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
+        <Label Text="Welcome to Bakun Express Load Tracker!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
 
-        <Label x:Name="currentLocationName"   
+        <Label x:Name="currentLocationName"   HorizontalOptions="Center" 
                        FontSize="15"/>
-        <Label x:Name="currentLocation"   
+        <Label x:Name="currentLocation" HorizontalOptions="Center" 
                        FontSize="15"/>
 
 
@@ -31,10 +31,10 @@
                        FontSize="10"/>-->
 
 
-        
 
-        <Button x:Name="readyForPickup" Text="Онлайн"  BackgroundColor="Green" TextColor="White"/>
-        <Button x:Name="offline" Text="Офлайн" BackgroundColor="red" TextColor="White"/>
+
+        <Button x:Name="readyForPickup" Text="Готов к загрузке"  BackgroundColor="Green" TextColor="White" WidthRequest="200" HeightRequest="200" BorderRadius="100" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
+        <Button x:Name="offline" Text="Оффлайн" BackgroundColor="red" TextColor="White" WidthRequest="200" HeightRequest="200" BorderRadius="100" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
         
     </StackLayout>
 
