--- a/App13/App13/Login.xaml
+++ b/App13/App13/Login.xaml
@@ -7,11 +7,15 @@
             <Label Text="Welcome to Bakun Express Load Tracker!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-            <Entry x:Name="loginEntry"  Placeholder = "Login"/>
-            <Entry x:Name="passwordEntry"  Placeholder = "Password" IsPassword ="True" />
+            <Entry x:Name="loginEntry"  Placeholder = "Логин"/>
+            <Entry x:Name="passwordEntry"  Placeholder = "Пароль" IsPassword ="True" />
             <Label x:Name="textLabel" FontSize="Large" />
+            <Label x:Name="loginfail" Text="Вы ввели неверный логин или пароль..."
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" TextColor="Red" />
             <Button x:Name="login" Text="Login" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
-
+           
+       
         </StackLayout>
 
        
