--- a/App13/App13/Notification.xaml
+++ b/App13/App13/Notification.xaml
@@ -3,20 +3,31 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App13.Notification">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Padding="20,20,20,20">
             <Label x:Name="tit"
                    Text="Новый груз"
                    FontSize="25"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="RED" FontAttributes="Bold"/>
-            
-            <Label x:Name="message"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center"/>
+                
+                HorizontalOptions="CenterAndExpand"
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalTextAlignment="Center" 
+                   TextColor="RED" FontAttributes="Bold"/>
+
+            <Label x:Name="milestopickup"  TextColor="RED"/>
+            <Label x:Name="from"  TextColor="Blue"/>
+            <Label x:Name="to"  TextColor="Blue"/>
+         
+            <Label x:Name="pickupdate" TextColor="Black" />
+            <Label x:Name="deliverydate" TextColor="Black" />
+            <Label x:Name="weight"  TextColor="Black"/>
+            <!--<Label x:Name="totalmiles" TextColor="RED" /-->
+            <Button x:Name="direction" Text="Просчитать маршрут"  />
             
             <Entry x:Name="bid"  Placeholder = "Предложыть цену"/>
+          
             <Button x:Name="submitbid" Text="Отправить"   />
             <Button x:Name="cancel" Text="Отмена"    />
         </StackLayout>
+        
     </ContentPage.Content>
 </ContentPage>
