--- a/App13/App13/Notification.xaml
+++ b/App13/App13/Notification.xaml
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App13.Notification">
+             x:Class="App13.Notification"
+               Title="Bakun Express Load Tracker"
+             >
     <ContentPage.Content>
         <StackLayout Padding="20,20,20,20">
             <Label x:Name="tit"
-                   Text="Новый груз"
+                   Text="Детали груза"
                    FontSize="25"
                 
                 HorizontalOptions="CenterAndExpand"
