--- a/App13/App13/Login.xaml
+++ b/App13/App13/Login.xaml
@@ -4,15 +4,14 @@
              x:Class="App13.Login">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Bakun Express Load Tracker"
+            <Label Text="Load Tracker"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" FontAttributes="Bold"/>
             <Entry x:Name="loginEntry"  Placeholder = "Логин"/>
             <Entry x:Name="passwordEntry"  Placeholder = "Пароль" IsPassword ="True" />
             <Label x:Name="textLabel" FontSize="Large" />
             <Label x:Name="loginfail" Text="Вы ввели неверный логин или пароль..."
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" TextColor="Red" />
+                HorizontalOptions="Center" VerticalOptions="CenterAndExpand" TextColor="Red" />
             <Button x:Name="login" Text="Login" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
 
             <Button x:Name="myname" StyleClass = "Link" Text="Created by Rostyslav Zhovnir"
