--- a/App13/App13/Notification.xaml
+++ b/App13/App13/Notification.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App13.Notification"
-               Title="Bakun Express Load Tracker"
+               Title="Load Tracker"
              >
     <ContentPage.Content>
         <StackLayout Padding="20,20,20,20">
